Fixed some alignement

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -67,6 +67,8 @@ $top-bar-height: 52px;
         text-overflow: ellipsis;
         max-width: 100px;
         display: inline-block;
+        position: relative;
+        bottom: -6px;
     }
 
     &__search-icon {
